--- a/api/package.json
+++ b/api/package.json
@@ -2,11 +2,17 @@
   "name": "api",
   "version": "0.0.0",
   "private": true,
+  "proxy": {
+  "/api/*": {
+    "target": "http://localhost:9000"
+  }
+},
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
